src/components/Main-page/about.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600&display=swap");
.Whole_div {
  background-repeat: repeat;
  background-size: auto 100vh;
  font-family: "Montserrat", sans-serif;
  position: relative;
}
.mediaInfo {
  margin-top: 10vh;
  background-size: auto 100vh;
}
.color_sectiom {
  background-color: #121930;
  padding-bottom: 5rem;
}
h1 {
  text-align: center;
  font-size: 5rem;
}
.Row {
  text-align: center;
}

.info {
  margin-top: 20vh;
  color: white;
}

.d-image img {
  width: 100%;
  position: relative;
  transition: 0.3s;
  top: 0px;
  transition: top 0.2s linear;
}
.d-image img:hover {
  opacity: 0.9;
  top: 10px;
}
.logoSection {
  text-align: center;
  padding: 20vh 10vh 0 10vh;
  margin-top: 3vh;
  margin-bottom: 3vh;
}
.members {
  padding: 0vh 10vh 0 10vh;
}
.prizesection {
  text-align: center;
  margin: 0 auto;
  padding: 0 4vh 0 4vh;
  margin: 17vh 14vh 0 14vh;
  border-radius: 14px;
  margin-top: 4vh;
  background-color: #f3effe;
}
.sponsorSection {
  padding: 17vh 18vh 0 18vh;
  margin-top: -10vh;
  margin-top: 0vh;
}
.faqsSection {
  text-align: center;
  margin: 0 auto;
  padding: 17vh 18vh 0 18vh;
  margin-top: -16vh;
}

.Venue {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 3rem;
}
.iframe {
  border: 2px outset #999;
  margin-right: 2rem;
  -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
  width: 90rem;
  height: 50rem;
}
.VenueText {
  font-size: large;
  font-weight: 500;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 2px outset #999;
  -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
  width: 40rem;
  height: 50rem;
  background-color: #e6e6e6;
}
.VenueDesc {
  padding: 1rem;
}
@media (max-width: 570px) {
  .info {
    margin-top: 6vh;
    color: white;
  }
  .mediaInfo {
    margin-top: 0;
  }
  .Whole_div {
    background-size: auto 100vh;
  }

  .faqsSection {
    padding: 0;
    margin-top: 0vh;
  }
  .members {
    margin: 0;
    padding: 0;
  }

  .prizesection {
    margin: 5vh 0 0 0;
    padding: 17vh 0 0 4vh;
  }
  .sponsorSection {
    padding: 0;
    margin: 0;
    margin: 12rem auto;
  }
  .logoSection {
    text-align: center;
    padding: 20vh 0vh 0 0vh;
  }
  .Venue {
    flex-direction: column;
    justify-content: center;
  }
  .iframe {
    border: 2px outset #999;
    -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
    width: 35rem;
    height: 35rem;
  }
  .VenueText {
    font-family: "Montserrat", sans-serif;
    width: 35rem;
    height: 35rem;
  }
}

@media (max-width: 810px) {
  .iframe {
    border: 2px outset #999;
    -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
    width: 35rem;
    height: 35rem;
  }
  .VenueText {
    font-family: "Montserrat", sans-serif;
    width: 35rem;
    height: 35rem;
  }
}


.flex{
  margin-top: 4em;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 10em;
  /* animation: mover 1s infinite alternate ; */
}

.card{
  border: 0px;
  border-radius: 10px;
  /* background: #BDD1DB; */
  width: 35em;
  height: 43em;
  position: relative;
  cursor: pointer;
  overflow: hidden;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
  transition: .3s linear;
  display: flex;
  justify-content: center;
  align-items: center;
}


.card::after{
  content: '';
  background-color: rgba(50, 13, 136,0.6);
  height: 100%;
  width: 100%;
  position: absolute;
  top: 137%;
  transform: translateY(-50%);
  cursor: pointer;
  transition: .3s ease-in-out .35s;  
}

.content{
  color: white;
  position: absolute;
  top: 88%;
  padding: 0 30px;
  transition: .5s cubic-bezier(.33,.99,.61,1.26) .55s;
  z-index: 1;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-y:sc;
}

.content h3{
  margin-bottom: 2em;
  align-self: start;
}

button{
  padding: 10px 35px;
  border-radius: 20px;
  border: 0;
  margin-top: 15px;
  font-size: 1.5em;
  position: relative;
  z-index: 1;
  transition: .3s linear;
  overflow: hidden;
  background-color: #121930e7;
  cursor: pointer;
}

button::after{
  content: '';
  width: 100%;
  height: 100%;
  clip-path: circle(0.5% at 0 0);
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%);
  z-index: -1;
  transition: .3s linear;
}


.card:hover .content{
  top: 10%;
 
}

.card:hover::after{
  top: 50%;
}

.card:hover .content::after{
  width: 80%;
}

.card-button:hover{
  color: white;
  background-color: #3e4042;
}

